--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,7 @@
         <scala.version>2.11.8</scala.version>
         <scala.macros.version>2.1.0</scala.macros.version>
         <spark.version>2.1.0</spark.version>
-        <bigdl.artifactId>bigdl-SPARK_2.1</bigdl.artifactId>
+        <bigdl.artifactId>bigdl</bigdl.artifactId>
         <maven-site-plugin.version>3.4</maven-site-plugin.version>
         <wagon-ssh.version>1.0</wagon-ssh.version>
         <maven-enforcer-plugin.version>1.3.1</maven-enforcer-plugin.version>
