--- a/zoo/pom.xml
+++ b/zoo/pom.xml
@@ -24,7 +24,7 @@
         <scala.macros.version>2.1.0</scala.macros.version>
         <scalatest.version>2.2.4</scalatest.version>
         <spark.version>2.1.0</spark.version>
-        <bigdl.version>0.6.0</bigdl.version>
+        <bigdl.version>0.7.0-SNAPSHOT</bigdl.version>
     </properties>
 
     <distributionManagement>
@@ -230,8 +230,8 @@
         </dependency>
         <dependency>
             <groupId>com.intel.analytics.bigdl</groupId>
-            <artifactId>bigdl</artifactId>
-            <version>0.7.0-SNAPSHOT</version>
+            <artifactId>${bigdl.artifactId}</artifactId>
+            <version>${bigdl.version}</version>
             <scope>${bigdl-scope}</scope>
         </dependency>
         <dependency>
