--- a/zoo/pom.xml
+++ b/zoo/pom.xml
@@ -61,7 +61,7 @@
                 <scala.major.version>2.11</scala.major.version>
                 <scala.version>2.11.8</scala.version>
                 <scala.macros.version>2.1.0</scala.macros.version>
-                <bigdl.artifactId>bigdl-SPARK_${spark-version.project}</bigdl.artifactId>
+                <bigdl.artifactId>bigdl</bigdl.artifactId>
             </properties>
         </profile>
 
