--- a/zoo/pom.xml
+++ b/zoo/pom.xml
@@ -18,7 +18,6 @@
         <java.version>1.7</java.version>
         <javac.version>1.7</javac.version>
         <spark-scope>provided</spark-scope>
-        <flink-scope>provided</flink-scope>
         <bigdl-scope>compile</bigdl-scope>
 
         <scala-library-scope>provided</scala-library-scope>
@@ -29,7 +28,7 @@
         <spark.version>2.4.3</spark.version>
         <bigdl.version>0.11.1</bigdl.version>
         <core.artifactId>zoo-core-dist-all</core.artifactId>
-        <core.dependencyType>pom</core.dependencyType>
+        <core.dependencyType>jar</core.dependencyType>
         <data-store-url>http://download.tensorflow.org</data-store-url>
         <inner-ftp-uri>http://10.239.45.10:8081/repository/raw</inner-ftp-uri>
         <tf-shade>bushade</tf-shade>
@@ -109,8 +108,6 @@
                 <scala.version>2.11.8</scala.version>
                 <scala.macros.version>2.1.0</scala.macros.version>
                 <bigdl.artifactId>bigdl-SPARK_${spark-version.project}</bigdl.artifactId>
-                <scala-library-scope>compile</scala-library-scope>
-                <spark-scope>compile</spark-scope>
             </properties>
             <dependencies>
                 <dependency>
@@ -401,6 +398,7 @@
             <artifactId>${core.artifactId}</artifactId>
             <version>0.9.0-SNAPSHOT</version>
             <type>${core.dependencyType}</type>
+	    <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>redis.clients</groupId>
@@ -651,17 +649,7 @@
                 <version>3.2.1</version>
                 <configuration>
                     <createDependencyReducedPom>true</createDependencyReducedPom>
-                    <shadedArtifactAttached>false</shadedArtifactAttached>
-                    <filters>
-                        <filter>
-                            <artifact>*:*</artifact>
-                            <excludes>
-                                <exclude>META-INF/*.SF</exclude>
-                                <exclude>META-INF/*.DSA</exclude>
-                                <exclude>META-INF/*.RSA</exclude>
-                            </excludes>
-                        </filter>
-                    </filters>
+		    <shadedArtifactAttached>false</shadedArtifactAttached>
                     <relocations>
                         <relocation>
                             <pattern>com.google.protobuf</pattern>
@@ -688,7 +676,6 @@
                         <configuration>
                             <artifactSet>
                                 <includes>
-                                    <include>org.spark-project.spark:unused</include>
                                     <include>com.google.protobuf</include>
                                     <include>io.netty</include>
                                     <include>org.apache.arrow</include>
@@ -709,30 +696,11 @@
                         <configuration>
                             <shadedArtifactAttached>true</shadedArtifactAttached>
                             <shadedClassifierName>serving</shadedClassifierName>
-                        </configuration>
-                    </execution>
 
-                    <execution>
-                        <id>without-spark</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-                            <shadedArtifactAttached>true</shadedArtifactAttached>
-                            <shadedClassifierName>jar-with-dependencies</shadedClassifierName>
                             <artifactSet>
-                                <excludes>
-                                    <exclude>org.apache.flink:*</exclude>
-                                    <exclude>org.apache.spark:*</exclude>
-                                    <exclude>org.apache.hadoop:*</exclude>
-                                    <exclude>org.apache.parquet:*</exclude>
-                                    <exclude>org.scala-lang:scala-compiler</exclude>
-                                    <exclude>org.scala-lang:scala-reflect</exclude>
-                                    <exclude>org.scala-lang:scala-library</exclude>
-                                    <exclude>org.scala-lang:scala-actors</exclude>
-                                    <exclude>org.scala-lang:scalap</exclude>
-                                </excludes>
+				<excludes>
+                                    <exclude>org.spark-project.spark:unused</exclude>
+				</excludes>
                             </artifactSet>
                         </configuration>
                     </execution>
@@ -760,14 +728,6 @@
                             </transformers>
                             <artifactSet>
                                 <excludes>
-                                    <exclude>org.apache.flink:*</exclude>
-                                    <exclude>org.apache.spark:*</exclude>
-                                    <exclude>org.apache.hadoop:*</exclude>
-                                    <exclude>org.apache.parquet:*</exclude>
-                                    <exclude>org.scala-lang:scala-compiler</exclude>
-                                    <exclude>org.scala-lang:scala-reflect</exclude>
-                                    <exclude>org.scala-lang:scala-actors</exclude>
-                                    <exclude>org.scala-lang:scalap</exclude>
                                     <exclude>com.intel.analytics.bigdl:bigdl-SPARK_2.4</exclude>
                                     <exclude>ml.dmlc:xgboost4j</exclude>
                                     <exclude>org.spark-project.spark:unused</exclude>
@@ -775,7 +735,7 @@
                                     <exclude>org.tensorflow:proto</exclude>
                                     <exclude>black.ninia:jep</exclude>
                                     <exclude>org.tensorflow:tensorflow-hadoop</exclude>
-                                    <exclude>com.intel.analytics.zoo:zoo-core-dist-all</exclude>
+                                    <exclude>com.intel.analytics.zoo.core:zoo-core-dist-all</exclude>
                                     <exclude>com.intel.analytics.zoo:zoo-core-openvino-java-linux</exclude>
                                     <exclude>com.intel.analytics.zoo:zoo-core-pmem-java-linux</exclude>
                                     <exclude>com.intel.analytics.zoo:zoo-core-tfnet-linux</exclude>
@@ -791,6 +751,19 @@
                             </artifactSet>
                         </configuration>
                     </execution>
+
+                    <execution>
+                        <id>without-spark</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <shadedArtifactAttached>true</shadedArtifactAttached>
+                            <shadedClassifierName>jar-with-dependencies</shadedClassifierName>
+                        </configuration>
+                    </execution>
+
                 </executions>
             </plugin>
             <plugin>
